--- a/src/index.html
+++ b/src/index.html
@@ -2,15 +2,26 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Homework 10</title>
+    <title>Homework 11</title>
   </head>
   <body>
-    <input type="text" id="search-box" />
-    <ul class="country-list"></ul>
-    <div class="country-info"></div>
 
-    <script src="index.js" type="module"></script>
+   <div class="search-container">
+      <form class="search-form " id="search-form">
+        <input type="text" name="searchQuery"  placeholder="Search images..."  />
+        <button class="btn-search" type="submit">
+          <svg width="16" height="12">
+            <use href="/src/images/sprite.svg#icon-search"></use>
+        </svg>
+        </button>
+      </form>
+    </div>
+    <div class="gallery-container">
+      <div class="gallery"></div>
+      <button type="button" class="btn-load-more is-hidden">Load more</button>
+      </div>
+    
+    <script src="./index.js" type="module"></script>
   </body>
 </html>
